[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rdm"
version = "0.1.0"
description = "API testing"
readme = "README.md"
authors = ["Nowod <uomoob@outlook.com>"]
license = "Apache"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"
jsonpath = "^0.82"
pydantic = "^1.9.0"
requests = "^2.27.1"
responses = "^0.18.0"
pytest = "^7.1.2"
pytest-html = "^3.1.1"
requests-toolbelt = "^0.9.1"

[tool.pytest.ini_options]
addopts = [
    "--html=report.html",
    "--self-contained-html",
    "-s"
    ]

[tool.ruff]
include = ["pyproject.toml", "rdm/*.py", "TestCases/*.py", "conftest.py"]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]

ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
  "W191", # indentation contains tabs
]


[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette", "pytest"]

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.format]
exclude = ["*.pyi"]
